vm.c
@@ -1834,7 +1834,7 @@ th_init(rb_thread_t *th, VALUE self)
     /* allocate thread stack */
 #ifdef USE_SIGALTSTACK
     /* altstack of main thread is reallocated in another place */
-    th->altstack = malloc(ALT_STACK_SIZE);
+    th->altstack = malloc(rb_sigaltstack_size());
 #endif
     th->stack_size = RUBY_VM_THREAD_STACK_SIZE;
     th->stack = thread_recycle_stack(th->stack_size);
